<resources>
    <string name="app_name">PollVault</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="input_pass">Password</string>
    <string name="login">Login</string>
    <string name="createAccount">No account yet? Create one</string>
    <string name="name">Username</string>
    <string name="existingAccount">Already have an account? Sign In</string>
    <string name="register">Register</string>
    <string name="confirmPass">Confirm Password</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, pharetra sit vulputate, leo velit purus, turpis tincidunt leo aliquam nam, neque augue class diam aut quis sit, congue magna. Enim magna per sed ut eleifend, orci fusce, id mollis quam, arcu et lobortis. Purus sed nullam vitae vel. Vitae rutrum et, massa vel sed metus vulputate, nam vel. Vehicula elit id laoreet. Nisl in magna erat sem, suscipit purus, vehicula incididunt sit tortor et nec, sem morbi quam blandit diam. Sem nonummy risus integer dapibus nulla, aenean lectus nec duis, eu augue habitant dictum at, suspendisse pede ante erat vehicula sollicitudin, sodales blandit erat ante etiam consectetuer. Vitae nec dolor ac nulla. Pede in dis, leo vitae ac nullam nec. Nam diam nam integer lacus vitae, sollicitudin quam amet massa sagittis, non mauris ut eros, nec wisi interdum ultricies faucibus dolor, amet porttitor eget ut amet sed. Imperdiet eget consectetuer urna penatibus interdum cras, nibh sapien amet ut integer ut.
Elementum vestibulum ut mi dui
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="contentDesc">Poll Description</string>
    <string name="submitPoll">Submit Poll</string>
    <string name="numChoices">Select number of options</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="option">Enter an option</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>
