<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:layout_marginStart="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:src="@drawable/logo"
            android:layout_marginBottom="28dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registerUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pass"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPass"
                android:inputType="textPassword"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/existingAccountLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/existingAccount"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:textSize="16sp"/>


    </LinearLayout>

</ScrollView>